// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateToken.vue [Confirm Step]: should be rendered correctly 1`] = `
<wallet-base-stub
  actionicon=""
  actiontooltip=""
  showback="true"
  showheader="true"
  title="Create"
  tooltip=""
>
  <div
    class="token"
  >
    <s-tabs-stub
      borderradius="small"
      class="token__tab"
      position="top"
      type="rounded"
      usedesignsystem="true"
      value="CreateSimpleToken"
    >
      <s-tab-stub
        label="Token"
        name="CreateSimpleToken"
      />
      <s-tab-stub
        label="NFT"
        name="CreateNftToken"
      />
    </s-tabs-stub>
     
    <createsimpletoken-stub
      step="1"
    />
  </div>
</wallet-base-stub>
`;

exports[`CreateToken.vue [Create Step]: should be rendered correctly 1`] = `
<wallet-base-stub
  actionicon=""
  actiontooltip=""
  showback="true"
  showheader="true"
  title="Create"
  tooltip=""
>
  <div
    class="token"
  >
    <s-tabs-stub
      borderradius="small"
      class="token__tab"
      position="top"
      type="rounded"
      usedesignsystem="true"
      value="CreateSimpleToken"
    >
      <s-tab-stub
        label="Token"
        name="CreateSimpleToken"
      />
      <s-tab-stub
        label="NFT"
        name="CreateNftToken"
      />
    </s-tabs-stub>
     
    <createsimpletoken-stub
      step="0"
    />
  </div>
</wallet-base-stub>
`;
